fixed scrollbar

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4358,10 +4358,8 @@ input[type="submit"].btn.btn-mini {
 
 .navbar-fixed-top,
 .navbar-fixed-bottom {
-  position: fixed;
   right: 0;
   left: 0;
-  z-index: 1030;
   margin-bottom: 0;
 }
 
@@ -5038,9 +5036,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .modal-body {
-  max-height: 400px;
-  padding: 15px;
-  overflow-y: auto;
+  overflow: auto;
 }
 
 .modal-form {
